<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Activity.ContactUsActivity"
    tools:ignore="HardcodedText">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/contactUs_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:navigationIconTint="@color/white"
        app:titleTextColor="#ffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/contact_us"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_170sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/flat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg"
                android:backgroundTint="@color/white"
                android:elevation="@dimen/_15sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="Information"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:elevation="@dimen/_10sdp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_10sdp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="UselessParent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="  Phone No."
                                android:textColor="@color/black"
                                android:textSize="@dimen/_11ssp"
                                android:textStyle="bold"
                                app:drawableStartCompat="@drawable/baseline_call_24" />

                            <TextView
                                android:id="@+id/sendCall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:text="@string/phone_no"
                                android:textColor="@color/link"
                                android:textSize="@dimen/_11ssp"
                                tools:ignore="RelativeOverlap" />


                        </RelativeLayout>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:layout_marginVertical="@dimen/_7sdp"
                            android:background="@color/editLine"
                            android:clickable="false"
                            android:focusable="false"
                            android:inputType="none"
                            tools:ignore="Autofill,LabelFor,VisualLintTextFieldSize,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="UselessParent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="  Email"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_11ssp"
                                android:textStyle="bold"
                                app:drawableStartCompat="@drawable/baseline_email_24" />

                            <TextView
                                android:id="@+id/sendEmail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:text="@string/email"
                                android:textColor="@color/link"
                                android:textSize="@dimen/_11ssp"
                                tools:ignore="RelativeOverlap" />


                        </RelativeLayout>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:layout_marginVertical="@dimen/_7sdp"
                            android:background="@color/editLine"
                            android:clickable="false"
                            android:focusable="false"
                            android:inputType="none"
                            tools:ignore="Autofill,LabelFor,VisualLintTextFieldSize,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="UselessParent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="  Location"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_11ssp"
                                android:textStyle="bold"
                                app:drawableStartCompat="@drawable/baseline_add_location_24" />

                            <TextView
                                android:id="@+id/sendAddress"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:text="@string/address"
                                android:textColor="@color/link"
                                android:textSize="@dimen/_11ssp"
                                tools:ignore="RelativeOverlap" />


                        </RelativeLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="Follow Me"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/instagram"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginHorizontal="@dimen/_7sdp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/instagram" />

                    <ImageView
                        android:id="@+id/facebook"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginHorizontal="@dimen/_7sdp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/facebook" />

                    <ImageView
                        android:id="@+id/twitter"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginHorizontal="@dimen/_7sdp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/twitter"
                        tools:ignore="ImageContrastCheck" />

                    <ImageView
                        android:id="@+id/linkedin"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginHorizontal="@dimen/_7sdp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/linkedin" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>


    <!--    <RelativeLayout-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    android:gravity="center">-->

    <!--    <LinearLayout-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        tools:ignore="UseCompoundDrawables">-->

    <!--        <ImageView-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_gravity="center"-->
    <!--            android:src="@drawable/baseline_call_24"-->
    <!--            tools:ignore="ContentDescription" />-->

    <!--        <TextView-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginStart="@dimen/_5sdp"-->
    <!--            android:text="Phone No."-->
    <!--            android:textColor="@color/black"-->
    <!--            android:textSize="@dimen/_11ssp"-->
    <!--            android:textStyle="bold" />-->
    <!--    </LinearLayout>-->


    <!--    <LinearLayout-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_alignParentEnd="true"-->
    <!--        android:orientation="vertical">-->

    <!--        <TextView-->
    <!--            android:id="@+id/sendCall"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="+91 123456780"-->
    <!--            android:textColor="@color/link"-->
    <!--            android:textSize="@dimen/_11ssp" />-->

    <!--        <EditText-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="@dimen/_1sdp"-->
    <!--            android:background="@color/link"-->
    <!--            android:clickable="false"-->
    <!--            android:focusable="false"-->
    <!--            android:inputType="none"-->
    <!--            tools:ignore="Autofill,LabelFor" />-->

    <!--    </LinearLayout>-->


    <!--    </RelativeLayout>-->

    <!--    <EditText-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="@dimen/_1sdp"-->
    <!--    android:layout_marginVertical="@dimen/_7sdp"-->
    <!--    android:background="@color/editLine"-->
    <!--    android:clickable="false"-->
    <!--    android:focusable="false"-->
    <!--    android:inputType="none"-->
    <!--    tools:ignore="Autofill,LabelFor" />-->

    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="@dimen/_5sdp"-->
    <!--android:gravity="center">-->

    <!--<LinearLayout-->
    <!--    android:layout_width="wrap_content"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    android:orientation="horizontal"-->
    <!--    tools:ignore="UseCompoundDrawables">-->

    <!--    <ImageView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:contentDescription="@string/todo"-->
    <!--        android:src="@drawable/baseline_email_24" />-->

    <!--        <TextView-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginStart="@dimen/_5sdp"-->
    <!--            android:text="Email"-->
    <!--            android:textColor="@color/black"-->
    <!--            android:textSize="@dimen/_11ssp"-->
    <!--            android:textStyle="bold" />-->
    <!--</LinearLayout>-->


    <!--<LinearLayout-->
    <!--    android:layout_width="wrap_content"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    android:layout_alignParentEnd="true"-->
    <!--    android:orientation="vertical">-->

    <!--    <TextView-->
    <!--        android:id="@+id/sendEmail"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="abcd1234@gmail.com"-->
    <!--        android:textColor="@color/link"-->
    <!--        android:textSize="@dimen/_11ssp" />-->

    <!--    <EditText-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="@dimen/_1sdp"-->
    <!--        android:background="@color/link"-->
    <!--        android:clickable="false"-->
    <!--        android:focusable="false"-->
    <!--        android:inputType="none"-->
    <!--        tools:ignore="Autofill,LabelFor" />-->

    <!--</LinearLayout>-->


    <!--</RelativeLayout>-->

    <!--<EditText-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_1sdp"-->
    <!--android:layout_marginVertical="@dimen/_7sdp"-->
    <!--android:background="@color/editLine"-->
    <!--android:clickable="false"-->
    <!--android:focusable="false"-->
    <!--android:inputType="none"-->
    <!--tools:ignore="Autofill,LabelFor" />-->

    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="@dimen/_5sdp"-->
    <!--android:gravity="center">-->

    <!--<LinearLayout-->
    <!--    android:layout_width="wrap_content"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    android:orientation="horizontal"-->
    <!--    tools:ignore="UseCompoundDrawables">-->

    <!--    <ImageView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:src="@drawable/baseline_add_location_24"-->
    <!--        tools:ignore="ContentDescription" />-->

    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="@dimen/_5sdp"-->
    <!--        android:text="Location"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="@dimen/_11ssp"-->
    <!--        android:textStyle="bold" />-->
    <!--</LinearLayout>-->


    <!--<LinearLayout-->
    <!--    android:layout_width="wrap_content"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    android:layout_alignParentEnd="true"-->
    <!--    android:orientation="vertical">-->

    <!--    <TextView-->
    <!--        android:id="@+id/sendAddress"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Lucknow Dlf my pad"-->
    <!--        android:textColor="@color/link"-->
    <!--        android:textSize="@dimen/_11ssp" />-->


    <!--    <EditText-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="@dimen/_1sdp"-->
    <!--        android:background="@color/link"-->
    <!--        android:clickable="false"-->
    <!--        android:focusable="false"-->
    <!--        android:inputType="none"-->
    <!--        tools:ignore="Autofill,LabelFor" />-->

    <!--</LinearLayout>-->


    <!--</RelativeLayout>-->
